--- a/votedforbyparty.html
+++ b/votedforbyparty.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet"href="css.css">
 <h1>Votes of id 9730 of the UK MEPs by Party</h1>
 <h2>Data Compiled From <a target="_blank"href="https://www.votewatch.eu/en/term8-copyright-in-the-digital-single-market-draft-legislative-resolution-provisional-agreement-amendment-.html#/##vote-tabs-list-9">Here</a></h2>
-<h3>Votes 'For' id #9730 <a href="votedforperson.html">Here</a></h3>
+<h3>Votes 'For' id #9730 <a href="index.html">Here</a></h3>
 <table cellpadding="0" cellspacing="0" border="0" class="standard_table dataTable" id="vote_by_np" style="width: 100%;">
     <thead>
         <tr role="row">
